--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   intl: ^0.20.2
-  path_provider: ^2.1.5
   pdf: ^3.11.3
   file_selector: ^1.0.3
   sqflite_common_ffi: ^2.3.6
   file_picker: ^10.3.2
+  window_manager: ^0.5.1
+  drift: ^2.28.1
+  drift_flutter: ^0.2.5
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +55,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-
+  drift_dev: ^2.28.1
+  build_runner: ^2.6.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
